# HDR-Converter

./: README.md  build_all.bat  build_all.ps1  download_deps.ps1  extra.md  pubspec.yaml
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/hdr/convert/hdr_convert/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: conversion_settings.dart
lib/screens/: home_screen.dart
lib/services/: file_save_helper.dart  file_save_helper_io.dart  file_save_helper_stub.dart  file_save_helper_web.dart  hdr_converter.dart  hdr_converter_gpu.dart  hdr_converter_gpu_io.dart  hdr_converter_gpu_stub.dart  hdr_converter_gpu_web.dart  hdr_converter_io.dart  hdr_converter_platform.dart  hdr_converter_stub.dart  hdr_converter_web.dart  hdr_gpu_ffi.dart
lib/widgets/: settings_panel.dart
lib/widgets/web/: hdr_viewer.dart
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/plugins/hdr_gpu/: BUILD.md  CMakeLists.txt  compile_cuda.bat
windows/plugins/hdr_gpu/include/: hdr_gpu.h
windows/plugins/hdr_gpu/shaders/: compile_shaders.bat  pass1_srgb_to_linear.hlsl  pass2_apply_hdr.hlsl
windows/plugins/hdr_gpu/src/: cuda_backend.cpp  cuda_backend.h  cuda_kernels.cu  directcompute_backend.cpp  directcompute_backend.h  hdr_gpu.cpp
windows/plugins/hdr_gpu/tools/: embed_ptx.cmake  ptx_to_header.py
windows/runner/: CMakeLists.txt  Runner.rc  main.cpp
